infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: karimshaaban/client:latest
          imagePullPolicy: Never #don't pull from docker registery use the local image
--- # to create multiple objects inside a yaml file
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: ClusterIP  #default not a must
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000 #has to match react app listening port
      targetPort: 3000
