infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: karimshaaban/comments:latest
          imagePullPolicy: Never #don't pull from docker registery use the local image
--- # to create multiple objects inside a yaml file
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: ClusterIP  #default not a must
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
