infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: karimshaaban/event-bus:latest
          imagePullPolicy: Never #don't pull from docker registery use the local image
--- # to create multiple objects inside a yaml file
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus
    type: ClusterIP #default not a must
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005 #must match node.js listening port
      targetPort: 4005
