infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: karimshaaban/posts:latest
          imagePullPolicy: Never #don't pull from docker registery use the local image
--- #multiple objects within same file
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv #beacuse we have nodeport we'd name it something else other than posts-srv
spec:
  selector:
    app: posts
    type: ClusterIP #default not a must
  ports:
    - name: posts
      protocol: TCP
      port: 4000 #must match node.js listening port
      targetPort: 4000
